--- a/index.html
+++ b/index.html
@@ -1,65 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVG Viewer</title>
+
     <style>
         body {
-            display: flex;
-            flex-direction: column;
-            align-items: left;
             margin: 0;
-            height: 100vh;
+            padding: 0;
+            display: flex;
+            min-height: 100vh;
+            justify-content: center;
+            align-items: center;
+            background-color: #f4f4f4;
+            font-family: Arial, sans-serif;
         }
 
-        #svg-container {
+        #svgSelector {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            padding: 5px;
+            z-index: 999;
+        }
+
+        #svgContainer {
             width: 100%;
-            max-width: 600px;
-            margin-top: 20px;
-            border: 2px solid #007bff;
-            box-sizing: border-box;
-            overflow: hidden;
-        }
-
-        #svg-viewport {
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            cursor: grab;
-        }
-
-        #svg-selector {
-            margin-top: 20px;
-        }
-
-        #zoom-in-btn,
-        #zoom-out-btn {
-            margin-top: 10px;
-            cursor: pointer;
+            max-width: 800px;
+            height: auto;
+            margin: 20px;
         }
     </style>
 </head>
-
 <body>
-    <select id="svg-selector">
-        <option value="Политическая карта.svg">Политическая карта</option>
-        <option value="Карта Высот.svg">Карта Высот</option>
-        <option value="Карта Биомов.svg">Карта Биомов</option>
-        <!-- Добавьте дополнительные опции для каждого SVG-файла -->
-    </select>
-    <div id="svg-container">
-        <div id="svg-viewport"></div>
-        <button id="zoom-in-btn">Увеличить</button>
-        <button id="zoom-out-btn">Уменьшить</button>
-    </div>
-    <script>
-        const svgContainer = document.getElementById('svg-container');
-        const svgViewport = document.getElementById('svg-viewport');
-        const svgSelector = document.getElementById('svg-selector');
-        const zoomInBtn = document.getElementById('zoom-in-btn');
-        const zoomOutBtn = document.getElementById('zoom-out-btn');
-        let currentScale = 1;
-        let isDragging = false;
-        let dragS
+
+<!-- Выпадающий список -->
+<label for="svgSelector">Выберите SVG файл:</label>
+<select id="svgSelector" onchange="loadSVG()">
+    <option value="Политическая карта.svg">Политическая карта</option>
+    <option value="Карта Высот.svg">Карта Высот</option>
+    <option value="Карта Биомов.svg">Карта Биомов</option>
+    <!-- Добавьте нужные SVG файлы и названия в список -->
+</select>
+
+<!-- Контейнер для SVG -->
+<div id="svgContainer"></div>
+
+<script>
+    // Функция для загрузки выбранного SVG файла
+    function loadSVG() {
+        var selector = document.getElementById("svgSelector");
+        var selectedSVG = selector.options[selector.selectedIndex].value;
+
+        // Получаем контейнер для SVG
+        var svgContainer = document.getElementById("svgContainer");
+
+        // Загружаем SVG файл в контейнер
+        svgContainer.innerHTML = `<object type="image/svg+xml" data="${selectedSVG}" width="100%" height="100%"></object>`;
+    }
+
+    // Инициализируем страницу загрузкой первого SVG файла
+    window.onload = function () {
+        loadSVG();
+    };
+</script>
+
+</body>
+</html>
