--- a/index.html
+++ b/index.html
@@ -3,61 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SVG Viewer</title>
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            display: flex;
-            min-height: 100vh;
-            justify-content: center;
-            align-items: center;
-            background-color: #f4f4f4;
-            font-family: Arial, sans-serif;
-        }
-
-        #svgSelector {
-            position: fixed;
-            top: 10px;
-            left: 10px;
-            padding: 5px;
-            z-index: 999;
-        }
-
-        #svgContainer {
-            width: 100%;
-            height: 100vh;
-            overflow: hidden;
-        }
-
-        #svgObject {
-            width: 100%;
-            height: 100%;
-        }
-    </style>
+    <title>SVG Image Example</title>
 </head>
 <body>
 
-<!-- Выпадающий список -->
-<label for="svgSelector">Выберите SVG файл:</label>
-<select id="svgSelector" onchange="loadSVG()">
-        <option value="Политическая карта.svg">Политическая карта</option>
-        <option value="Карта Высот.svg">Карта Высот</option>
-        <option value="Карта Биомов.svg">Карта Биомов</option>
-    <!-- Добавьте нужные SVG файлы и названия в список -->
-</select>
+    <img src="Политическая карта.svg" alt="SVG Image">
 
-<!-- Контейнер для SVG -->
-<div id="svgContainer">
-    <object id="svgObject" type="image/svg+xml" data="" width="100%" height="100%"></object>
-</div>
-
-<script>
-    // Функция для загрузки выбранного SVG файла
-    function loadSVG() {
-        var selector = document.getElementById("svgSelector");
-        var selectedSVG = selector.options[selector.selectedIndex].value;
-
-        // Получаем объект для SVG
-        var svg
+</body>
+</html>
