--- a/index.html
+++ b/index.html
@@ -4,26 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SVG Image Example</title>
-
-    <style>
-        /* Добавьте стили, если необходимо */
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-        }
-
-        img {
-            width: 300px; /* Задайте ширину по вашему усмотрению */
-            height: auto; /* Автоматическое вычисление высоты для поддержки соотношения сторон */
-        }
-    </style>
 </head>
 <body>
 
-    <img src="Политическая карта.svg" alt="SVG Image">
+    <img src="your-image.svg" alt="SVG Image" width="1000" height="1000">
 
 </body>
 </html>
