--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <img src="your-image.svg" alt="SVG Image" width="1000" height="1000">
+    <img src="Политическая карта.svg" alt="SVG Image" width="1000" height="1000">
 
 </body>
 </html>
