--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
 </head>
 <body>
 
-    <img src="Политическая карта.svg" alt="Политическая карта" width="2000" height="2000">
+    <img src="Политическая карта.svg" 
+        type="image/svg+xml" 
+        alt="Политическая карта" 
+        width="2000"
+        height="2000">
 
 </body>
 </html>
