--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <img src="Политическая карта.svg" 
+    <obj src="Политическая карта.svg" 
         type="image/svg+xml" 
         width="2000"
         height="2000">
