--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
 </head>
 <body>
     <select id="svgSelector" onchange="changeSVG()">
-        <option value="Политическая карта.svg">Политическая карта</option>
+        <option value="Политичeская карта.svg">Политическая карта</option>
         <option value="Карта Высот.svg">Карта Высот</option>
         <option value="Карта Биомов.svg">Карта Биомов</option>
         <!-- Добавьте другие файлы в качестве значений опций -->
     </select>
 
-    <iframe id="svgFrame" src="Политическая карта.svg"></iframe>
+    <iframe id="svgFrame" src="Политичeская карта.svg"></iframe>
 
     <script>
         function changeSVG() {
