--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         }
 
         select {
-            position: fixed;
+            position: absolute;
             top: 10px;
             left: 10px;
             padding: 5px;
