--- a/index.html
+++ b/index.html
@@ -3,55 +3,89 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Карта Мира</title>
+    <title>SVG Viewer</title>
     <style>
         body {
+            display: flex;
+            flex-direction: column;
+            align-items: left;
             margin: 0;
-            overflow: hidden;
-        }
-
-        select {
-            position: sticky;
-            top: 10px;
-            left: 10px;
-            padding: 5px;
-            z-index: 999;
-        }
-
-        iframe {
-            width: 100%;
             height: 100vh;
-            border: none;
-            position: absolute;
-            top: 0;
-            left: 0;
-            transform-origin: top left;
+        }
+        .svg-container {
+            width: 100%;
+            max-width: 600px;
+            margin-top: 20px;
+            border: 2px solid #007bff;
+            box-sizing: border-box;
+            display: none; /* Скрываем все контейнеры по умолчанию */
+        }
+        #svg-selector {
+            margin-top: 20px;
         }
     </style>
 </head>
 <body>
-    <select id="svgSelector" onchange="changeSVG()">
-        <option value="Карта Политики.svg">Политическая карта</option>
+    <select id="svg-selector">
+        <option value="Политическая карта.svg">Политическая карта</option>
         <option value="Карта Высот.svg">Карта Высот</option>
         <option value="Карта Биомов.svg">Карта Биомов</option>
-        <!-- Добавьте другие файлы в качестве значений опций -->
+        <!-- Добавьте дополнительные опции для каждого SVG-файла -->
     </select>
+    
+    <div id="svg-container-political" class="svg-container"></div>
+    <div id="svg-container-height" class="svg-container"></div>
+    <div id="svg-container-biomes" class="svg-container"></div>
 
-    <iframe id="svgFrame" src="Карта Политики.svg"></iframe>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg-pan-zoom/3.6.1/svg-pan-zoom.min.js"></script>
     <script>
-        function changeSVG() {
-            var selector = document.getElementById("svgSelector");
-            var selectedValue = selector.options[selector.selectedIndex].value;
-            var iframe = document.getElementById("svgFrame");
-            iframe.src = selectedValue;
-            setZoom('svgFrame', 1.0); // Сброс приближения при смене файла
+        const svgSelector = document.getElementById('svg-selector');
+        const svgContainers = {
+            political: document.getElementById('svg-container-political'),
+            height: document.getElementById('svg-container-height'),
+            biomes: document.getElementById('svg-container-biomes')
+        };
+
+        function loadSvg(selectedContainer, selectedSvg) {
+            fetch(selectedSvg)
+                .then(response => response.text())
+                .then(svgText => {
+                    selectedContainer.innerHTML = svgText;
+                    initPanZoom(selectedContainer);
+                    selectedContainer.style.display = 'block'; // Показываем выбранный контейнер
+                })
+                .catch(error => console.error('Error loading SVG:', error));
         }
 
-        function setZoom(iframeId, zoom) {
-            var iframe = document.getElementById(iframeId);
-            iframe.style.transform = `scale(${zoom})`;
+        function initPanZoom(container) {
+            svgPanZoom(container, {
+                zoomEnabled: true,
+                controlIconsEnabled: true,
+                fit: true,
+                center: true,
+                contain: true
+            });
         }
+
+        // Загрузка SVG-файла при выборе нового значения в выпадающем списке
+        svgSelector.addEventListener('change', function() {
+            const selectedValue = svgSelector.value;
+            switch (selectedValue) {
+                case 'Политическая карта.svg':
+                    loadSvg(svgContainers.political, selectedValue);
+                    break;
+                case 'Карта Высот.svg':
+                    loadSvg(svgContainers.height, selectedValue);
+                    break;
+                case 'Карта Биомов.svg':
+                    loadSvg(svgContainers.biomes, selectedValue);
+                    break;
+                // Добавьте дополнительные кейсы при необходимости
+            }
+        });
+
+        // Инициализация при открытии страницы
+        loadSvg(svgContainers.political, 'Политическая карта.svg');
     </script>
 </body>
 </html>
