--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
             }
         });
 
-        loadSvg(svgContainers.political, 'Политическая карта.svg');
+        loadSvg(svgContainers.political, 'Карта Политики.svg');
     </script>
 </body>
 </html>
