--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 container.style.display = 'none';
             });
             switch (selectedValue) {
-                case 'Политическая карта.svg':
+                case 'Карта Политики.svg':
                     loadSvg(svgContainers.political, selectedValue);
                     break;
                 case 'Карта Высот.svg':
