--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             width: 100%;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg-pan-zoom/3.6.1/svg-pan-zoom.min.js"></script>
 </head>
 <body>
     <select id="svg-selector">
