--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
             border: 2px solid #007bff;
             box-sizing: border-box;
             overflow: hidden;
+            user-select: none; /* Запретить выделение текста */
+            cursor: grab; /* Изменить курсор при перемещении */
         }
         #svg-selector {
             margin-top: 20px;
@@ -26,78 +28,179 @@
             width: 100%;
         }
     </style>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg-pan-zoom/3.6.1/svg-pan-zoom.min.js"></script>
 </head>
 <body>
     <select id="svg-selector">
-        <option value="Карта Политики.svg">Политическая карта</option>
+        <option value="<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SVG Viewer</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            margin: 0;
+            height: 100vh;
+        }
+        .svg-container {
+            width: 100%;
+            max-width: 600px;
+            margin-top: 20px;
+            border: 2px solid #007bff;
+            box-sizing: border-box;
+            overflow: hidden;
+            user-select: none; /* Запретить выделение текста */
+            cursor: grab; /* Изменить курсор при перемещении */
+        }
+        #svg-selector {
+            margin-top: 20px;
+            max-width: 600px;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
+    <select id="svg-selector">
+        <option value="Политическая карта.svg">Политическая карта</option>
         <option value="Карта Высот.svg">Карта Высот</option>
         <option value="Карта Биомов.svg">Карта Биомов</option>
         <!-- Добавьте дополнительные опции для каждого SVG-файла -->
     </select>
     
-    <div id="svg-container-political" class="svg-container"></div>
-    <div id="svg-container-height" class="svg-container"></div>
-    <div id="svg-container-biomes" class="svg-container"></div>
+    <div id="svg-container" class="svg-container"></div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/svg-pan-zoom/3.6.1/svg-pan-zoom.min.js"></script>
     <script>
         const svgSelector = document.getElementById('svg-selector');
-        const svgContainers = {
-            political: document.getElementById('svg-container-political'),
-            height: document.getElementById('svg-container-height'),
-            biomes: document.getElementById('svg-container-biomes')
-        };
+        const svgContainer = document.getElementById('svg-container');
 
-       function loadSvg(selectedContainer, selectedSvg) {
-    fetch(selectedSvg)
-        .then(response => {
-            if (!response.ok) {
-                throw new Error(`Failed to fetch SVG: ${selectedSvg}`);
-            }
-            return response.text();
-        })
-        .then(svgText => {
-            selectedContainer.innerHTML = svgText;
-            initPanZoom(selectedContainer);
-            selectedContainer.style.display = 'block';
-        })
-        .catch(error => {
-            console.error(error.message);
-            selectedContainer.innerHTML = `Error loading SVG: ${error.message}`;
-            selectedContainer.style.display = 'block';
-        });
-}
+        function loadSvg(selectedSvg) {
+            fetch(selectedSvg)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`Failed to fetch SVG: ${selectedSvg}`);
+                    }
+                    return response.text();
+                })
+                .then(svgText => {
+                    svgContainer.innerHTML = svgText;
+                    enablePanZoom();
+                })
+                .catch(error => {
+                    console.error(error.message);
+                    svgContainer.innerHTML = `Error loading SVG: ${error.message}`;
+                });
+        }
 
-        function initPanZoom(container) {
-            svgPanZoom(container, {
-                zoomEnabled: true,
-                controlIconsEnabled: true,
-                fit: true,
-                center: true,
-                contain: true
+        function enablePanZoom() {
+            let isDragging = false;
+            let startPoint;
+
+            svgContainer.addEventListener('mousedown', (e) => {
+                isDragging = true;
+                startPoint = { x: e.clientX, y: e.clientY };
+                svgContainer.style.cursor = 'grabbing';
+            });
+
+            window.addEventListener('mousemove', (e) => {
+                if (!isDragging) return;
+                const deltaX = e.clientX - startPoint.x;
+                const deltaY = e.clientY - startPoint.y;
+                startPoint = { x: e.clientX, y: e.clientY };
+                svgContainer.scrollLeft += deltaX;
+                svgContainer.scrollTop += deltaY;
+            });
+
+            window.addEventListener('mouseup', () => {
+                isDragging = false;
+                svgContainer.style.cursor = 'grab';
+            });
+
+            svgContainer.addEventListener('wheel', (e) => {
+                const scaleFactor = e.deltaY > 0 ? 1.1 : 0.9;
+                svgContainer.style.transform = `scale(${scaleFactor})`;
             });
         }
 
         svgSelector.addEventListener('change', function() {
             const selectedValue = svgSelector.value;
-            Object.values(svgContainers).forEach(container => {
-                container.style.display = 'none';
-            });
-            switch (selectedValue) {
-                case 'Карта Политики.svg':
-                    loadSvg(svgContainers.political, selectedValue);
-                    break;
-                case 'Карта Высот.svg':
-                    loadSvg(svgContainers.height, selectedValue);
-                    break;
-                case 'Карта Биомов.svg':
-                    loadSvg(svgContainers.biomes, selectedValue);
-                    break;
-            }
+            loadSvg(selectedValue);
         });
 
-        loadSvg(svgContainers.political, 'Карта Политики.svg');
+        // Инициализация при открытии страницы
+        loadSvg(svgSelector.value);
+    </script>
+</body>
+</html>
+">Политическая карта</option>
+        <option value="Карта Высот.svg">Карта Высот</option>
+        <option value="Карта Биомов.svg">Карта Биомов</option>
+        <!-- Добавьте дополнительные опции для каждого SVG-файла -->
+    </select>
+    
+    <div id="svg-container" class="svg-container"></div>
+
+    <script>
+        const svgSelector = document.getElementById('svg-selector');
+        const svgContainer = document.getElementById('svg-container');
+
+        function loadSvg(selectedSvg) {
+            fetch(selectedSvg)
+                .then(response => {
+                    if (!response.ok) {
+                        throw new Error(`Failed to fetch SVG: ${selectedSvg}`);
+                    }
+                    return response.text();
+                })
+                .then(svgText => {
+                    svgContainer.innerHTML = svgText;
+                    enablePanZoom();
+                })
+                .catch(error => {
+                    console.error(error.message);
+                    svgContainer.innerHTML = `Error loading SVG: ${error.message}`;
+                });
+        }
+
+        function enablePanZoom() {
+            let isDragging = false;
+            let startPoint;
+
+            svgContainer.addEventListener('mousedown', (e) => {
+                isDragging = true;
+                startPoint = { x: e.clientX, y: e.clientY };
+                svgContainer.style.cursor = 'grabbing';
+            });
+
+            window.addEventListener('mousemove', (e) => {
+                if (!isDragging) return;
+                const deltaX = e.clientX - startPoint.x;
+                const deltaY = e.clientY - startPoint.y;
+                startPoint = { x: e.clientX, y: e.clientY };
+                svgContainer.scrollLeft += deltaX;
+                svgContainer.scrollTop += deltaY;
+            });
+
+            window.addEventListener('mouseup', () => {
+                isDragging = false;
+                svgContainer.style.cursor = 'grab';
+            });
+
+            svgContainer.addEventListener('wheel', (e) => {
+                const scaleFactor = e.deltaY > 0 ? 1.1 : 0.9;
+                svgContainer.style.transform = `scale(${scaleFactor})`;
+            });
+        }
+
+        svgSelector.addEventListener('change', function() {
+            const selectedValue = svgSelector.value;
+            loadSvg(selectedValue);
+        });
+
+        // Инициализация при открытии страницы
+        loadSvg(svgSelector.value);
     </script>
 </body>
 </html>
