--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
     <select id="svg-selector">
-        <option value="Политическая карта.svg">Политическая карта</option>
+        <option value="Карта Политики.svg">Политическая карта</option>
         <option value="Карта Высот.svg">Карта Высот</option>
         <option value="Карта Биомов.svg">Карта Биомов</option>
         <!-- Добавьте дополнительные опции для каждого SVG-файла -->
