--- a/index.html
+++ b/index.html
@@ -3,33 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Открытие JSON на веб-странице</title>
+    <title>Карта Мира</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+
+        select {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            padding: 5px;
+            z-index: 999;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
 </head>
 <body>
+    <select id="svgSelector" onchange="changeSVG()">
+        <option value="Карта Политики.svg">Политическая карта</option>
+        <option value="Карта Высот.svg">Карта Высот</option>
+        <option value="Карта Биомов.svg">Карта Биомов</option>
+        <!-- Добавьте другие файлы в качестве значений опций -->
+    </select>
 
-    <h1>JSON Viewer</h1>
-    <button onclick="loadJSON()">Загрузить JSON</button>
-    <pre id="json-container"></pre>
+    <iframe id="svgFrame" src="Карта Политики.svg"></iframe>
 
     <script>
-        function loadJSON() {
-            fetch('Louberlin Minimal 2024-02-04-11-11.json') // Замените 'example.json' на путь к вашему JSON файлу
-                .then(response => response.json())
-                .then(data => {
-                    // Обработка загруженного JSON
-                    displayJSON(data);
-                })
-                .catch(error => {
-                    console.error('Ошибка при загрузке JSON:', error);
-                });
-        }
-
-        function displayJSON(jsonData) {
-            // Отображение JSON на странице
-            var jsonContainer = document.getElementById('json-container');
-            jsonContainer.textContent = JSON.stringify(jsonData, null, 2);
+        function changeSVG() {
+            var selector = document.getElementById("svgSelector");
+            var selectedValue = selector.options[selector.selectedIndex].value;
+            var iframe = document.getElementById("svgFrame");
+            iframe.src = selectedValue;
         }
     </script>
-
 </body>
 </html>
