--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             top: 10px; /* Верхний отступ */
             left: 10px; /* Левый отступ */
         }
+        #svgImage {
+            width: 100%; /* Установите желаемую ширину карты, например, 100% для полного ширины экрана */
+            max-width: 800px; /* Опционально: установите максимальную ширину для предотвращения излишнего увеличения */
+        }
     </style>
 </head>
 <body>
