--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </select>
 
 <!-- Изображение SVG -->
-<img id="svgImage" src="Карта Политики.svg" alt="SVG Image">
+<img id="svgImage" src="Карта Политики.svg" alt="SVG Image" loading="lazy">
 
 <script>
     // Функция для изменения источника изображения при выборе опции
