--- a/index.html
+++ b/index.html
@@ -10,18 +10,12 @@
             position: fixed;
             top: 10px; /* Верхний отступ */
             left: 10px; /* Левый отступ */
-        }
-        #svgContainer {
-            position: relative;
-            overflow: hidden;
-            width: 100%;
-            max-width: 1800px;
-            height: 600px; /* Установите желаемую высоту карты */
+            z-index: 2; /* Установим z-index, чтобы выпадающий список был выше */
         }
         #svgImage {
-            width: 100%;
-            height: 100%;
-            transition: transform 0.3s ease; /* Добавим плавную анимацию при масштабировании */
+            width: 100%; /* Установите желаемую ширину карты, например, 100% для полного ширины экрана */
+            max-width: 1800px; /* Опционально: установите максимальную ширину для предотвращения излишнего увеличения */
+            z-index: 1; /* Установим z-index, чтобы карта была ниже */
         }
     </style>
 </head>
@@ -35,53 +29,34 @@
     <!-- Добавьте другие опции с разными изображениями SVG -->
 </select>
 
-<!-- Контейнер для SVG с поддержкой прокрутки и масштабирования -->
-<div id="svgContainer">
-    <!-- Изображение SVG -->
-    <img id="svgImage" src="Карта Политики.svg" alt="SVG Image">
-</div>
+<!-- Изображение SVG -->
+<svg id="svgImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid meet"></svg>
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/svg-pan-zoom/3.5.0/svg-pan-zoom.min.js"></script>
 <script>
     // Функция для изменения источника изображения при выборе опции
     function changeSVG() {
         var select = document.getElementById("svgSelector");
-        var image = document.getElementById("svgImage");
-        image.src = select.value;
-        resetTransform(); // Сбросить масштаб и позицию при смене изображения
+        var svgImage = document.getElementById("svgImage");
+
+        // Загрузка нового SVG
+        var xhr = new XMLHttpRequest();
+        xhr.onreadystatechange = function () {
+            if (xhr.readyState === 4 && xhr.status === 200) {
+                svgImage.innerHTML = xhr.responseText;
+
+                // Инициализация svg-pan-zoom
+                svgPanZoom(svgImage, {
+                    zoomEnabled: true,
+                    controlIconsEnabled: true,
+                    fit: true,
+                    center: true,
+                });
+            }
+        };
+        xhr.open("GET", select.value, true);
+        xhr.send();
     }
-
-    // Функция для сброса масштаба и позиции
-    function resetTransform() {
-        var container = document.getElementById("svgContainer");
-        container.style.transform = "none";
-    }
-
-    // Добавляем обработчики для прокрутки и масштабирования
-    var container = document.getElementById("svgContainer");
-    var isDragging = false;
-    var startOffset = { x: 0, y: 0 };
-
-    container.addEventListener("mousedown", function (e) {
-        isDragging = true;
-        startOffset = { x: e.clientX, y: e.clientY };
-    });
-
-    document.addEventListener("mousemove", function (e) {
-        if (isDragging) {
-            var offsetX = e.clientX - startOffset.x;
-            var offsetY = e.clientY - startOffset.y;
-            container.style.transform = "translate(" + offsetX + "px, " + offsetY + "px)";
-        }
-    });
-
-    document.addEventListener("mouseup", function () {
-        isDragging = false;
-    });
-
-    container.addEventListener("wheel", function (e) {
-        var scaleFactor = e.deltaY > 0 ? 1.1 : 0.9;
-        container.style.transform = "scale(" + scaleFactor + ")";
-    });
 </script>
 
 </body>
