--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
 </select>
 
 <!-- Изображение SVG -->
-<svg id="svgImage" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 800 600" preserveAspectRatio="xMidYMid meet"></svg>
+<object id="svgObject" type="image/svg+xml" data="Карта Политики.svg"
+        data-srcset="Карта Политики_small.svg 480w, Карта Политики_medium.svg 800w, Карта Политики_large.svg 1200w"
+        width="100%" height="100%"></object>
+
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/svg-pan-zoom/3.5.0/svg-pan-zoom.min.js"></script>
 <script>
