--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             z-index: 999;
         }
 
-       svgImage {
+        iframe {
             width: 100%;
             height: 100vh;
             border: none;
@@ -36,14 +36,13 @@
         <!-- Добавьте другие файлы в качестве значений опций -->
     </select>
 
-   <!-- Изображение SVG -->
-<img id="svgImage" src="Карта Политики.svg" alt="SVG Image">
+    <iframe id="svgFrame" src="Карта Политики.svg"></iframe>
 
     <script>
         function changeSVG() {
             var selector = document.getElementById("svgSelector");
             var selectedValue = selector.options[selector.selectedIndex].value;
-            var svgImage = document.getElementById("svgFrame");
+            var iframe = document.getElementById("svgFrame");
             iframe.src = selectedValue;
         }
     </script>
