--- a/index.html
+++ b/index.html
@@ -30,7 +30,107 @@
 </head>
 <body>
     <select id="svgSelector" onchange="changeSVG()">
-        <option value="Карта Политики.svg">Политическая карта</option>
+        <option value="<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Карта Мира</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+
+        select {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            padding: 5px;
+            z-index: 999;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
+<body>
+    <select id="svgSelector" onchange="changeSVG()">
+        <option value="<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Карта Мира</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+        }
+
+        select {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            padding: 5px;
+            z-index: 999;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100vh;
+            border: none;
+            position: absolute;
+            top: 0;
+            left: 0;
+        }
+    </style>
+</head>
+<body>
+    <select id="svgSelector" onchange="changeSVG()">
+        <option value="P.svg">Политическая карта</option>
+        <option value="V.svg">Карта Высот</option>
+        <option value="B.svg">Карта Биомов</option>
+        <!-- Добавьте другие файлы в качестве значений опций -->
+    </select>
+
+    <iframe id="svgFrame" src="Карта Политики.svg"></iframe>
+
+    <script>
+        function changeSVG() {
+            var selector = document.getElementById("svgSelector");
+            var selectedValue = selector.options[selector.selectedIndex].value;
+            var iframe = document.getElementById("svgFrame");
+            iframe.src = selectedValue;
+        }
+    </script>
+</body>
+</html>
+.svg">Политическая карта</option>
+        <option value="Карта Высот.svg">Карта Высот</option>
+        <option value="Карта Биомов.svg">Карта Биомов</option>
+        <!-- Добавьте другие файлы в качестве значений опций -->
+    </select>
+
+    <iframe id="svgFrame" src="Карта Политики.svg"></iframe>
+
+    <script>
+        function changeSVG() {
+            var selector = document.getElementById("svgSelector");
+            var selectedValue = selector.options[selector.selectedIndex].value;
+            var iframe = document.getElementById("svgFrame");
+            iframe.src = selectedValue;
+        }
+    </script>
+</body>
+</html>
+.svg">Политическая карта</option>
         <option value="Карта Высот.svg">Карта Высот</option>
         <option value="Карта Биомов.svg">Карта Биомов</option>
         <!-- Добавьте другие файлы в качестве значений опций -->
